Sat Jan 22 11:33:04 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb: merge keys are actually
	  part of YAML 1.1, so they should be supported.  Remove warning and
	  merge keys to parent.  [ruby-core:34679]

	* test/psych/test_merge_keys.rb: test for merge keys

Sat Jan 22 11:21:40 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/parser.c (parse): fixing off-by-one error on line numbers
	  in parse exceptions.  [ruby-core:34690]

	* test/psych/test_parser.rb: test for error

Sat Jan 22 10:25:19 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/parser.c (parse): add the file name to the exception when
	  parse errors occur.

	* test/psych/test_parser.rb: test for parse error file name

Sat Jan 22 10:12:30 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/parser.c (parse): fix assertion error when reusing a
	  parser after an exception has been raised
	
	* test/psych/test_parser.rb: test for assertion error

Sat Jan 22 04:09:22 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/nodes/node.rb: Make Psych::Nodes::Node
	  enumerable.

	* ext/psych/lib/psych/visitors/depth_first.rb: Add a depth-first
	  visitor to enumerate over a YAML AST in a depth-first fashion

	* test/psych/nodes/test_enumerable.rb: test for enumerating nodes

	* test/psych/visitors/test_depth_first.rb: test for depth-first
	  visitor

Sat Jan 22 00:53:42 2011  Tanaka Akira  <akr@fsij.org>

	* vm_core.h: parenthesize macro arguments.

Fri Jan 21 18:15:09 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: should not use -Werror=* flags while conftests.

Fri Jan 21 09:17:00 2011  Luis Lavena  <luislavena@gmail.com>

	* configure.in: Fix incorrectly detected x86_64-w64-mingw32 due
	  canonalization of target_os. Bug #3889 [ruby-core:32634]

Thu Jan 20 23:44:00 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: Fix rb_cv_va_args_macro was broken. We are using